--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Announcement bar */
+
+#announcementBar {
+    background: linear-gradient(
+        90deg,
+        rgba(4, 18, 30, 1) 3%,
+        rgba(26, 55, 80, 1) 100%
+    );
+}
