Add responsive header Adds the header navigation bar that collapse into mobile menu.

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
 
 /* Announcement bar */
 
+#root {
+    min-width: 200px;
+}
+
 #announcementBar {
     background: linear-gradient(
         90deg,
