--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.light-gray-bg-custom {
+    background: rgb(245 246 247);
+}
+
+.washed-gray-bg {
+    background: rgb(53 53 53);
+}
 
 /* Announcement bar */
 
 #root {
     min-width: 200px;
-}
-
-#announcementBar {
-    background: linear-gradient(
-        90deg,
-        rgba(4, 18, 30, 1) 3%,
-        rgba(26, 55, 80, 1) 100%
-    );
 }
 
 /* Product grid */
