--- a/src/styles.css
+++ b/src/styles.css
@@ -15,11 +15,73 @@
 /* Announcement bar */
 
 #root {
-    min-width: 200px;
+    min-width: 273px;
 }
 
 /* Product grid */
 
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 18px;
+    row-gap: 18px;
+    list-style: none;
+    padding: 0;
+}
+
+.product-item {
+    max-width: calc(25% - 14px);
+    padding: 20px;
+    background: #f5f6f7;
+}
+
+/* Media queries for product grid */
+
+@media screen and (max-width: 1140px) {
+    .product-item {
+        max-width: calc(33.5% - 14px);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .product-item {
+        max-width: calc(50.77% - 14px);
+    }
+}
+
+@media screen and (max-width: 491px) {
+    .product-list {
+        column-gap: 0px;
+    }
+
+    .product-item {
+        max-width: 100%;
+    }
+}
+
 .product-item img {
-    height: 216px;
+    height: 100%;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+/* Overrides LazyLoadImage NPM package default behaviour */
+
+.lazy-load-image-background.blur.lazy-load-image-loaded {
+    height: 100% !important;
+    width: 100% !important;
+}
+
+/* Override toast colors */
+
+.Toastify__progress-bar--success {
+    background: #079669;
+}
+.Toastify__toast-icon svg {
+    fill: #079669;
+}
+
+.Toastify__toast-theme--light {
+    color: #5a5454;
+    font-weight: 400;
 }
