Amend cart total price to consider discounted products
This commit amends the cart component to consider the total price
when the product has been discounted. Before it was calculating
the total price without the discounted price.

--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,10 @@
 }
 
 /* Override toast colors */
+.Toastify__toast {
+    position: relative;
+    top: 16px;
+}
 
 .Toastify__progress-bar--success {
     background: #079669;
